# AB-programacion

./: AB PROGRAMACION.sln  AB PROGRAMACION.vcxproj  AB PROGRAMACION.vcxproj.filters  CMakeLists.txt  README.md  citaMedica.cpp  fecha.cpp  fecha.h  hospitalManagment.cpp  main.cpp  medico.cpp  paciente.cpp  paciente.h  registroClinico.cpp  registroClinico.h
